--- a/django_demo/requirements-dev.txt
+++ b/django_demo/requirements-dev.txt
@@ -7,7 +7,11 @@ billiard==3.6.1.0
 black==19.10b0
 celery==4.3.0
 Click==7.0
+coverage==4.5.4
 Django==3.0
+gevent==1.4.0
+greenlet==0.4.15
+gunicorn==20.0.4
 importlib-metadata==1.2.0
 isort==4.3.21
 kombu==4.6.7
@@ -16,6 +20,7 @@ mccabe==0.6.1
 more-itertools==8.0.2
 mypy==0.750
 mypy-extensions==0.4.3
+mysqlclient==1.4
 pathspec==0.6.0
 ptvsd==4.3.2
 pylint==2.4.4
