--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,6 +8,7 @@ services:
             context: .
         ports:
             - 8080:80
+        logging: { options: { max-size: "10m", max-file: "3" } }
     django:
         image: django-docker-demo:dev
         build:
@@ -25,6 +26,7 @@ services:
             DJANGO_DB_DATABASE: "django"
             DJANGO_DB_USER: "djangouser"
             DJANGO_DB_PASSWORD: "djangouserpassword"
+        logging: { options: { max-size: "10m", max-file: "3" } }
 
     celery-worker:
         image: django-docker-demo:latest
@@ -34,8 +36,11 @@ services:
         volumes:
             - ./django_demo/:/app/
         command: "celery -A django_demo.tasks worker --loglevel=info"
+        logging: { options: { max-size: "10m", max-file: "3" } }
+
     redis:
         image: redis:5.0-alpine
+        logging: { options: { max-size: "10m", max-file: "3" } }
     
     db:
         image: mariadb:10.4
@@ -47,6 +52,7 @@ services:
             MYSQL_RANDOM_ROOT_PASSWORD: "yes"
         volumes:
             - django-db:/var/lib/mysql
+        logging: { options: { max-size: "10m", max-file: "3" } }
 
 volumes:
     django-db:
